# python-sendparcel

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  ecosystem-smoke.yml
docs/: compatibility-matrix.md  conf.py  getting-started.md  index.md  installation-matrix.md  provider-authoring.md  release-policy.md  requirements.txt
docs/plans/: 2026-02-17-order-optional.md
src/sendparcel/: __init__.py  enums.py  exceptions.py  flow.py  fsm.py  protocols.py  provider.py  registry.py  types.py  validators.py
src/sendparcel/providers/: __init__.py  dummy.py
tests/: conftest.py  test_builtin_dummy_provider.py  test_enums.py  test_exceptions.py  test_flow.py  test_fsm.py  test_integration.py  test_protocols.py  test_provider.py  test_public_api.py  test_registry.py  test_types.py  test_validators.py
