[project]
name = "python-sendparcel"
version = "0.1.0"
description = "Framework-agnostic parcel shipping core for Python."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.12"
authors = [{ name = "Dominik Kozaczko" }]
dependencies = [
    "transitions>=0.9.0",
    "httpx>=0.27.0",
    "anyio>=4.0",
]

[project.optional-dependencies]
dev = [
    "pre-commit>=4.0",
    "pre-commit-hooks>=6.0.0",
    "pytest>=8.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.9.0",
    "ty>=0.0.16",
]
dummy = []
django = ["django-sendparcel>=0.1.0"]
fastapi = ["fastapi-sendparcel>=0.1.0"]
litestar = ["litestar-sendparcel>=0.1.0"]
providers = []
frameworks = [
    "django-sendparcel>=0.1.0",
    "fastapi-sendparcel>=0.1.0",
    "litestar-sendparcel>=0.1.0",
]
all = [
    "django-sendparcel>=0.1.0",
    "fastapi-sendparcel>=0.1.0",
    "litestar-sendparcel>=0.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/sendparcel"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py312"
line-length = 80
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "W", "F", "I", "N", "UP", "B", "A", "SIM", "RUF"]
ignore = ["N818", "B027"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["RUF012"]

[tool.ty.environment]
python-version = "3.12"

[tool.ty.terminal]
error-on-warning = true

[[tool.ty.overrides]]
include = ["tests/**"]
[tool.ty.overrides.rules]
unresolved-attribute = "ignore"
invalid-argument-type = "ignore"
invalid-return-type = "ignore"

[tool.uv.sources]
django-sendparcel = { path = "../django-sendparcel", editable = true }
fastapi-sendparcel = { path = "../fastapi-sendparcel", editable = true }
litestar-sendparcel = { path = "../litestar-sendparcel", editable = true }
