[project]
name = "python-sendparcel"
version = "0.1.1"
description = "Framework-agnostic parcel shipping core for Python."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.12"
authors = [{ name = "Dominik Kozaczko", email = "dominik@kozaczko.info" }]
keywords = ["shipping", "parcel", "delivery", "sendparcel", "logistics"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Natural Language :: English",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Typing :: Typed",
]
dependencies = ["transitions>=0.9.0", "httpx>=0.27.0", "anyio>=4.0"]

[project.optional-dependencies]
dev = [
  "pre-commit>=4.0",
  "pre-commit-hooks>=6.0.0",
  "pytest>=8.0",
  "pytest-asyncio>=0.24.0",
  "pytest-cov>=5.0",
  "ruff>=0.9.0",
  "ty>=0.0.16",
]
dummy = []
django = ["django-sendparcel>=0.1.0"]
fastapi = ["fastapi-sendparcel>=0.1.0"]
litestar = ["litestar-sendparcel>=0.1.0"]
inpost = ["python-sendparcel-inpost>=0.1.0"]
dpdpl = ["python-sendparcel-dpdpl>=0.1.0"]
cli = ["python-sendparcel-cli>=0.1.0"]
providers = ["python-sendparcel-inpost>=0.1.0", "python-sendparcel-dpdpl>=0.1.0"]
frameworks = [
  "django-sendparcel>=0.1.0",
  "fastapi-sendparcel>=0.1.0",
  "litestar-sendparcel>=0.1.0",
]
all = [
  "django-sendparcel>=0.1.0",
  "fastapi-sendparcel>=0.1.0",
  "litestar-sendparcel>=0.1.0",
  "python-sendparcel-inpost>=0.1.0",
  "python-sendparcel-dpdpl>=0.1.0",
  "python-sendparcel-cli>=0.1.0",
]

[project.urls]
Homepage = "https://github.com/sendparcel/python-sendparcel"
Documentation = "https://python-sendparcel.readthedocs.io/"
Repository = "https://github.com/sendparcel/python-sendparcel"
Changelog = "https://github.com/sendparcel/python-sendparcel/blob/main/CHANGELOG.md"
"Issue Tracker" = "https://github.com/sendparcel/python-sendparcel/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/sendparcel"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py312"
line-length = 80
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "W", "F", "I", "N", "UP", "B", "A", "SIM", "RUF"]
ignore = ["N818", "B027"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["RUF012"]

[tool.ty.environment]
python-version = "3.12"

[tool.ty.terminal]
error-on-warning = true

[[tool.ty.overrides]]
include = ["tests/**"]
[tool.ty.overrides.rules]
unresolved-attribute = "ignore"
invalid-argument-type = "ignore"
invalid-return-type = "ignore"

[tool.uv.sources]
django-sendparcel = { path = "../django-sendparcel", editable = true }
fastapi-sendparcel = { path = "../fastapi-sendparcel", editable = true }
litestar-sendparcel = { path = "../litestar-sendparcel", editable = true }
python-sendparcel-inpost = { path = "../python-sendparcel-inpost", editable = true }
python-sendparcel-dpdpl = { path = "../python-sendparcel-dpdpl", editable = true }
python-sendparcel-cli = { path = "../python-sendparcel-cli", editable = true }

[tool.coverage.run]
branch = true
source = ["sendparcel"]

[tool.coverage.report]
show_missing = true

[dependency-groups]
dev = [
    "mypy>=1.19.1",
]

[tool.mypy]
strict = true
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
